--- a/Energy.App.Standalone/PageComponents/Modal.razor.css
+++ b/Energy.App.Standalone/PageComponents/Modal.razor.css
@@ -11,6 +11,14 @@
 .eme-popover-header-hide {
     visibility: hidden;
 }
+
+.eme-popover-processing-data-spinner {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
 .popover-overlay {
     position: fixed; /* Fix position to the top-left of the screen */
     top: 0;
