--- a/Energy.App.Standalone/Pages/Index.razor
+++ b/Energy.App.Standalone/Pages/Index.razor
@@ -11,7 +11,7 @@
 
     <MudGrid Justify="Justify.Center">
         <MudItem xs="12">
-            <Modal InitialSetupStages="SetupStage" @bind-Open="OpenWizard">
+            <Modal InitialSetupStages="SetupStage" Open="OpenWizard">
             </Modal>
         </MudItem>
         <MudItem xs="12">
