--- a/Energy.App.Standalone/Features/Setup/Meter/Pages/MeterAuthorizationFormComponent.razor
+++ b/Energy.App.Standalone/Features/Setup/Meter/Pages/MeterAuthorizationFormComponent.razor
@@ -6,7 +6,6 @@
     <MudCard Elevation="0">
         <MudCardHeader>
             <MudText Typo="Typo.h6">@MeterType Meter Authorization</MudText>
-            <MudAlert Severity="Severity.Info"></MudAlert>
         </MudCardHeader>
         <MudCardContent Style="height: auto;
                                        min-height: 100%;">
@@ -17,7 +16,7 @@
                 <MudTextField Label='Move-in Date' Value="@MoveInDateString" ReadOnly="true"></MudTextField>
             </div>
             <div class="mb-1">
-                <MudButton @onclick="CheckAuthorization" Variant="Variant.Filled" hidden="@AuthorizeSucceeded">Confirm Authorization</MudButton>
+                <MudButton OnClick="OnCheckAuthorizationClicked" Variant="Variant.Filled" hidden="@AuthorizeSucceeded">Confirm Authorization</MudButton>
             </div>
 
 
@@ -31,10 +30,10 @@
             <div id="authorizationFailed" hidden="@(!AuthorizeFailed)">
                 <p class="text-warning">Authorization Failed</p>
                 <p>We could not access your smart meter data - have you completed the authorization process with n3rgy?</p>
-                <p>n3rgy responded with: @MeterProblemMessage</p>
+                <p>n3rgy responded with: @AuthorizeFailedMessage</p>
             </div>
 
-            <iframe id="n3rgy-iframe" src="https://data.n3rgy.com/consumer-sign-up" style="width: 100%; height: 1000px;" hidden="@_authorizeSucceeded"></iframe>
+            <iframe id="n3rgy-iframe" src="https://data.n3rgy.com/consumer-sign-up" style="width: 100%; height: 1000px;" hidden="@AuthorizeSucceeded"></iframe>
 
         </MudCardContent>
         <MudCardActions>
