--- a/Energy.App.Standalone/Pages/SetupWizard/WizardModal.razor
+++ b/Energy.App.Standalone/Pages/SetupWizard/WizardModal.razor
@@ -84,7 +84,7 @@
     [Inject] NavigationManager NavigationManager { get; set; }
     [Inject] InMemoryStateContainer InMemoryStateContainer { get; set; }
 
-    [Inject] IState<TermsAndConditions> TermsAndConditions { get; set; }
+    [Inject] IState<TermsAndConditionsState> TermsAndConditions { get; set; }
 
     [Parameter] public bool Open { get; set; }
     [Parameter]
