--- a/Energy.App.Standalone/Pages/SetupWizard/StepContents/WelcomeScreenContent.razor
+++ b/Energy.App.Standalone/Pages/SetupWizard/StepContents/WelcomeScreenContent.razor
@@ -3,56 +3,86 @@
 @inject IDispatcher Dispatcher
 
 <MudText Typo="Typo.body1" Align="Align.Start">
-    <strong>Explain my Energy</strong> is a tool to help you understand your existing energy bills and anticipate when and how much they might change.
-    <br />
-    <br />
-
-    It is designed to be used by anyone, as long as you have a smart meter (it doesn't even have to be working).
-    <br />
-    <br />
-    We use your historical energy usage, your energy tariff details and local weather data to show you:
-    <br />
-    <br />
-
-
-    1) How much your recent bills have been, and future energy bills will be
-    <br />
-
-    2) How much your spending changes as outside temperatures change  - and allowing you change the forecast to see it effects your bills.
-    <br />
-    <br />
-
-    And that's alongside powerful charting tools that allow you to see everything from granular hourly energy spikes, to whole seasonal energy costs, simply with a mouse scroll (or a swipe).
-    <br />
-    <br />
-    <br />
-
-
-    We don't sell energy, we don't sell your data, we don't even store your data.<br />
-    We're using the latest web browser technology to bring you a tool that is fast, secure and private.<br />
-    All your data is stored and processed locally on your device; we don't even know it exists. <br />
+    <p ><strong>Explain my Energy</strong> is a free, open-source tool to help you understand both your existing energy bills and your future energy costs and consumption.</p>
+    <p >It is designed to be used by anyone, as long as you have a smart meter (it doesn't even have to be working).</p>
+    <p >The application uses your historical energy usage, your energy tariff details and local weather data to give you:</p>
+    <ul class="ml-3">
+        <li>Detailed breakdowns of your historical, current and future energy costs and consumption</li>
+        <li>How much your costs change with weather changes - change the forecast, and see how much your energy usage spikes (or drops) </li>
+        <li>Powerful charting tools that allow you to see everything from granular hourly energy spikes, to whole seasonal energy costs, simply with a mouse scroll (or a swipe)</li>
+    </ul>
 
     <br />
-    <br />
-    And that's just version 1.0. With AI becoming more mainstream, we'll be looking add more features that really tailor recommendations to you and your home.<br />
-    We're hoping you'll join us on this journey. If you have any comments or suggestions, please email us at <a href="mailto:TODO@TODO.com" />
+
+    <p><strong>Explain my Energy</strong> doesn't sell energy; doesn't sell your data; it doesn't collect your data.</p>
+    <p >There is no sign up, no login, no cookies, no tracking, no ads.</p>
+    <p >It uses the latest web browser technology to store and process everything on your device. </p>
+
+    <p>This is an initial <strong>beta version</strong> of the application. Feedback is much appreciated and will help determine whether the app provides enough value to warrant maintaining and developing further. Advancements in AI offer interesting possibilities - tailored energy advice unique to each individual and their home, for example.</p>
+    <p>So please feel free to email me at <a href="mailto:explainmyenergy@duck.com">explainmyenergy@duck.com</a> with any problems, comments or suggestions.</p>
+
 
     <br />
     <br />
-    If you've landed on this page, it means the application is not yet set up - if this is your first time setting up, starting the setup wizard might be the best option.
+    <p >To begin using <strong>Explain my Energy</strong>, please check the <MudLink OnClick="ShowTermsDialog">Terms &amp; Conditions</MudLink></p>
+    <p>The privacy policy is also available <MudLink OnClick="ShowPrivacyDialog">here</MudLink>.</p>
+    <MudCheckBox T="bool" TriState="false" Checked="TermsAccepted" CheckedChanged="OnTermsAcceptChange" >I accept the Terms &amp; Conditions</MudCheckBox>
+
+
+    <MudDialog @bind-IsVisible="TermsDialogVisible" Options="DialogOptions" ClassActions="d-flex justify-center">
+
+        <DialogContent>
+            <TermsAndConditionsPage />
+        </DialogContent>
+        <DialogActions>
+            <MudButton Variant="Variant.Filled" Size="Size.Large" Color="Color.Default" OnClick="CloseTermsDialog">Close</MudButton>
+        </DialogActions>
+    </MudDialog>
+
+    <MudDialog @bind-IsVisible="PrivacyDialogVisible" Options="DialogOptions" ClassActions="d-flex justify-center">
+
+        <DialogContent>
+            <PrivacyPolicyPage />
+        </DialogContent>
+        <DialogActions>
+            <MudButton Variant="Variant.Filled" Size="Size.Large" Color="Color.Default" OnClick="ClosePrivacyDialog">Close</MudButton>
+        </DialogActions>
+    </MudDialog>
+
+
     <br />
     <br />
     Otherwise, feel free to explore the application and set up your home and meters manually.
-    <MudButton ButtonType="ButtonType.Button" OnClick="OnTermsAccept">I have read Terms &amp; Conditions</MudButton>
 </MudText>
 
 
 @code {
 
+    [Inject] IState<TermsAndConditionsState> TermsAndConditionsState { get; set; }
 
-    private void OnTermsAccept()
+
+    bool TermsAccepted => TermsAndConditionsState.Value.Accepted;
+
+    private void OnTermsAcceptChange(bool isChecked)
     {
-        Dispatcher.Dispatch(new AcceptTermsAndConditionsAction(true));
+        Dispatcher.Dispatch(new AcceptTermsAndConditionsAction(isChecked));
     }
+
+
+    bool TermsDialogVisible;
+    void CloseTermsDialog() => TermsDialogVisible = false;
+    void ShowTermsDialog() => TermsDialogVisible = true;
+
+    private DialogOptions DialogOptions = new()
+        {
+            MaxWidth = MaxWidth.Medium,
+            CloseOnEscapeKey = true,
+            CloseButton = true
+
+        };
+
+    bool PrivacyDialogVisible;
+    void ClosePrivacyDialog() => PrivacyDialogVisible = false;
+    void ShowPrivacyDialog() => PrivacyDialogVisible = true;
 
 }
